[package]
name = "ed_join"
version = "0.1.0"
authors = ["Lucius Hu <lebensterben@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
dialoguer = "0.4.0"
rayon = "1.2.0"
log = "0.4.8"
env_logger = "0.7.0"
error-chain = "0.12.1"
parking_lot = "0.9.0"
edit-distance = "2.1.0"

[dependencies.indexmap]
version = "1.2.0"
features = ["rayon"]

[dependencies.indicatif]
version = "0.12.0"
features = ["with_rayon"]
