[package]
name = "ed_join"
version = "1.0.0"
authors = ["Lucius Hu <lebensterben@users.noreply.github.com>"]
edition = "2018"
description = "A Rust Implemtation of Ed-Join Algorithm for string similarity join"
repository = "https://github.com/lebensterben/ed_join"
documentation = "https://notatall.io/ed_join/ed_join/index.html"
keywords = ["string", "similarity", "text-processing", "algorithm"]
categories = ["algorithms", "text-processing"]
license = "Apache-2.0 AND MIT"

[badges]
travis-ci = { repository = "lebensterben/ed_join" }

[features]
cli = ["clap", "dialoguer", "env_logger", "indicatif", "log"]

[[bin]]
name = "ed-join"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
edit-distance = "2.1.0"
error-chain = "0.12.1"
parking_lot = "0.9.0"
rayon = "1.2.0"

clap = { version = "2.33.0", optional = true }
dialoguer = { version = "0.4.0", optional = true }
env_logger = { version = "0.7.0", optional = true }
log = { version = "0.4.8", optional = true }

[dependencies.indexmap]
version = "1.2.0"
features = ["rayon"]

[dependencies.indicatif]
version = "0.12.0"
features = ["with_rayon"]
optional = true
