[package]
name = "ed_join"
version = "1.1.1"
authors = ["Lucius Hu <lebensterben@users.noreply.github.com>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/lebensterben/ed_join"
documentation = "https://notatall.io/ed_join/ed_join/index.html"
homepage = "https://crates.io/crates/ed_join"
description = """
A Rust Implemtation of Ed-Join Algorithm for string similarity join
"""
keywords = ["string", "similarity", "text-processing", "algorithm"]
categories = ["algorithms", "text-processing"]
exclude = ["/.travis.yml", "/.gitignore"]
edition = "2018"

[badges]
travis-ci = { repository = "lebensterben/ed_join" }

[features]
cli = ["clap", "dialoguer", "env_logger", "indicatif", "log"]

[[bin]]
name = "ed-join"
path = "src/bin.rs"
required-features = ["cli"]

[dependencies]
crossbeam-channel = "0.5.0"
edit-distance = "2.1.0"
error-chain = "0.12.1"
rayon = "1.2.0"

# optional dependencies
clap = { version = "2.33.0", optional = true }
dialoguer = { version = "0.8.0", optional = true }
env_logger = { version = "0.8.1", optional = true }
log = { version = "0.4.8", optional = true }

[dependencies.indicatif]
version = "0.16.0"
features = ["with_rayon"]
optional = true

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
